fixing logo shift on homepage and max width for small desktops

--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,10 @@ h6 {
 
 @media (min-width: 1024px) and (max-height: 768px) {
   .container {
-    max-width: 980px;
+    max-width: 820px;
+  }
+
+  .desktop-menu {
+    max-width: 100%;
   }
 }
